Added student group e2e test